minor fix report date

--- a/challenges+supervision.html
+++ b/challenges+supervision.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="Luis P. Prieto" />
 
+<meta name="date" content="2021-09-09" />
 
 <title>Challenges AND Supervision Analyses</title>
 
@@ -413,7 +414,7 @@ summary {
 
 <h1 class="title toc-ignore">Challenges AND Supervision Analyses</h1>
 <h4 class="author">Luis P. Prieto</h4>
-<h4 class="date">23/4/2021</h4>
+<h4 class="date">2021-09-09</h4>
 
 </div>
 
